objects/JBCXM__CustomerInstances__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CustomerInstances</relationshipLabel>
        <relationshipName>CustomerInstances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CustomerInfo</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>CustomerInstances</relationshipLabel>
        <relationshipName>CustomerInstances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__InstanceName__c</fullName>
        <label>InstanceName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>CustomerInstances</label>
    <nameField>
        <label>InstanceId</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomerInstances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>